--- a/app/package.json
+++ b/app/package.json
@@ -7,11 +7,14 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
   },
-  "author": "Nana Janashia",
+  "author": "Zeeshan Shahid",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
-    "mongodb": "^3.3.3"
+    "mongodb": "^3.3.3",
+    "@aws-sdk/client-s3": "3.876.0",
+    "multer": "1.4.5-lts.1",
+    "dotenv": "^17.2.1" 
   }
 }
